# sdk-py

./: .gitignore  MANIFEST.in  Makefile  README.md  RELEASE.md  fswatch-sh.sh  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
examples/: README.md  common.py
examples/01_hello_world/: main.py
examples/02_context_options/: main.py
examples/03_files/: main.py
examples/04_streaming/: main.py
examples/05_templates/: main.py
examples/06_volumes/: main.py
examples/07_webhook/: main.py
examples/08_network/: main.py
examples/09_expose_port/: main.py
sandbox0/: __init__.py  client.py  client_credential_sources.py  client_functions.py  client_observability.py  client_quotas.py  client_sandboxes.py  client_templates.py  client_volumes.py  errors.py  models.py  resources.py  response.py  response_normalize.py  sandbox.py  sandbox_contexts.py  sandbox_exposed_ports.py  sandbox_files.py  sandbox_functions.py  sandbox_logs.py  sandbox_network.py  sandbox_observability.py  sandbox_processes.py  sandbox_public_gateway.py  sandbox_services.py  sandbox_sessions.py  sandbox_volumes.py  sessions.py  template_helpers.py  volume_files.py  webhook_signature.py
sandbox0/apispec/: __init__.py
sandbox0/apispec/models/: __init__.py  activate_function_revision_request.py  activate_run_revision_request.py  active_team.py  add_team_member_request.py  add_team_member_request_role.py  affinity.py  api_key.py  app_armor_profile.py  app_armor_profile_type.py  append_replica_changes_request.py  append_replica_changes_response.py  auth_provider.py  cache_policy_spec.py  capabilities.py  change_password_request.py  change_request.py  change_request_entry_kind.py  change_request_metadata.py  claim_mount_request.py  claim_request.py  claim_response.py  clone_volume_file_entry.py  clone_volume_file_result.py  clone_volume_file_result_mode.py  clone_volume_files_request.py  clone_volume_files_request_mode.py  container_mount_spec.py  container_spec.py  context_exec_response.py  context_input_request.py  context_resource_usage.py  context_response.py  context_response_env_vars.py  context_stats_response.py  context_web_socket_done.py  context_web_socket_done_type.py  context_web_socket_input.py  context_web_socket_input_type.py  context_web_socket_output.py  (+619 more)
sandbox0_deepagents/: __init__.py  backend.py  provider.py
sandbox0_openai_agents/: __init__.py  adapter.py
tests/: test_deepagents_adapter.py  test_functions.py  test_observability.py  test_openai_agents_adapter.py  test_pool_strategy.py  test_quotas.py  test_response_helpers.py  test_response_normalize.py  test_runs.py  test_sandbox_builders.py  test_sandbox_cmd.py  test_sandbox_functions.py  test_sandbox_logs.py  test_sandbox_network.py  test_sandbox_observability.py  test_sandbox_processes.py  test_sandbox_public_gateway.py  test_sandbox_services.py  test_sandbox_sessions.py  test_sandboxes.py  test_team_quota_contract.py  test_templates.py  test_volume_files.py  test_volumes.py  test_webhook_signature.py
tests/e2e/: helpers.py  test_client.py  test_deepagents_standard.py  test_errors.py  test_sandbox_contexts.py  test_sandbox_exposed_ports.py  test_sandbox_files.py  test_sandbox_mounts.py  test_sandbox_network.py  test_sandbox_run.py  test_sandboxes.py  test_templates.py  test_volumes.py
(+195 files in other folders)
