[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox0"
version = "0.1.2"
description = "Sandbox0 Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Sandbox0 Team" },
]
keywords = ["sandbox", "sdk", "sandbox0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx[socks]>=0.27.0,<0.29.0",
  "attrs>=22.2.0",
  "python-dateutil>=2.8.0,<3.0.0",
  "websockets>=12.0",
]

[project.urls]
Homepage = "https://sandbox0.ai"
Repository = "https://github.com/sandbox0-ai/sdk-py"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "openapi-python-client==0.26.2",
  "mypy>=1.8.0",
  "pytest>=9.1.0,<10.0.0; python_version >= '3.10'",
  "pytest-asyncio>=1.3.0; python_version >= '3.10'",
  "langchain-tests>=1.1.9,<2.0.0; python_version >= '3.10'",
]
openai-agents = [
  "openai-agents>=0.17.6,<0.18; python_version >= '3.10'",
]
deepagents = [
  "deepagents==0.7.0a2; python_version >= '3.11'",
  "deepagents-code==0.1.26; python_version >= '3.11'",
]

[project.entry-points."deepagents_code.sandbox_providers"]
sandbox0 = "sandbox0_deepagents.provider:Sandbox0Provider"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sandbox0*"]

[tool.setuptools.package-data]
sandbox0 = ["py.typed"]
sandbox0_openai_agents = ["py.typed"]
sandbox0_deepagents = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
exclude = ["sandbox0/apispec/"]
ignore_missing_imports = true
